whiteboard use cdk drag and drop with matMenu from https://stackoverflow.com/questions/56560220/click-event-firing-after-dragging/56560579#56560579 by add event.stopPropagation() in click handle

--- a/src/app/page/whiteboard/whiteboard.component.css
+++ b/src/app/page/whiteboard/whiteboard.component.css
@@ -41,3 +41,8 @@
   /*display: inline;*/
   /*flex:1;*/
 }
+
+/*test from https://stackoverflow.com/questions/56560220/click-event-firing-after-dragging*/
+.pointer-events-none {
+  pointer-events: none;
+}
